Simple routing system using switch

--- a/views/404.html
+++ b/views/404.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>404</title>
 </head>
 <body>
-    <h1>welcome to your Home</h1>
-    <p>by Hisham</p>
+    <h1>404</h1>
+    <h2>oops this page doesn't exist</h2>
 </body>
 </html>
