--- a/views/contact.html
+++ b/views/contact.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Contact us</title>
 </head>
 <body>
-    <h1>welcome to your Home</h1>
-    <p>by Hisham</p>
+    <h1>Contact us</h1>
+    <h2>Here you can contact us</h2>
 </body>
 </html>
