creating the same logic but with express: app.js file" ;

--- a/views/contact.html
+++ b/views/contact.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Contact us</h1>
     <h2>Here you can contact us</h2>
+
+    <nav>
+        <a href="/contact">contact</a>
+        <a href="/">home</a>
+    </nav>
+
 </body>
 </html>
