--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>welcome to your Home</h1>
     <p>by Hisham</p>
+
+    <nav>
+        <a href="/contact">contact</a>
+        <a href="/">home</a>
+    </nav>
 </body>
 </html>
