routing the ejs views using express for rendering

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,22 @@
 <html lang="en">
-  <%- include('./partials/head.ejs') %->
+<%- include('./partials/head.ejs') %>
 
-  <body>
-    <%- include('./partials/header.ejs') %>
+<body>
+  <%- include('./partials/header.ejs') %>
 
-    <main>
-      <h1>Welcome to My Blog</h1>
-      <p>Here you'll find articles about my learning journey</p>
-      <h2>Recent Posts</h2>
-      <ul>
-        <li><a href="#">How to Plan a Trip to Europe</a></li>
-        <li><a href="#">The Best Vegan Recipes for Summer</a></li>
-        <li><a href="#">The Future of Virtual Reality Technology</a></li>
-      </ul>
-    </main>
-    
-    <%- include('./partials/footer.ejs') %>
+  <main>
+    <h1>Welcome to My Blog</h1>
+    <p>Here you'll find articles about my learning journey</p>
+    <h2>Recent Posts</h2>
+    <ul>
+      <li>
+        <h2> How to Plan a Trip to Europe </h2>
+        <p>this is a snippeta sdfa df asdf asdf asd fasd fasd fas dfas df</p>
+      </li>
+    </ul>
+  </main>
 
-  </body>
+  <%- include('./partials/footer.ejs') %>
+
+</body>
 </html>
