--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,6 @@
   <nav>
     <a href="/">Home</a> |
     <a href="/about">About</a> |
-    <a href="/contact">Contact</a>
+    <a href="/blogs/create">create post</a>
   </nav>
 </header>
