--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,14 +1,14 @@
 <html lang="en">
-    <%- include('./partials/head.ejs') %->
+    <%- include('./partials/head.ejs') %>
 
     <body>
 
-        <%- include('./partials/header.ejs') %->
+        <%- include('./partials/header.ejs') %>
 
         <h1>404</h1>
         <h2>oops this page doesn't exist</h2>
 
-        <%- include('./partials/footer.ejs') %->
+        <%- include('./partials/footer.ejs') %>
 
     </body>
 </html>
