--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,22 +1,22 @@
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
 
-  <body>
+<body>
 
-    <%- include('./partials/header.ejs')%>
+<%- include('./partials/header.ejs')%>
 
-      <main>
-        <h1>About My Blog</h1>
-        <p>Welcome to my blog! I started this blog to share my thoughts and
-          experiences on various topics that interest me. I hope you find the
-          content on this blog informative and entertaining.</p>
-        <h2>About Me</h2>
-        <p>My name is Hisham Elmorsi and I am a software engineer and a
-          passionate learner.. In my free time, I enjoy reading books and
-          listening to podcasts.</p>
-      </main>
+  <main>
+    <h1>About My Blog</h1>
+    <p>Welcome to my blog! I started this blog to share my thoughts and
+      experiences on various topics that interest me. I hope you find the
+      content on this blog informative and entertaining.</p>
+    <h2>About Me</h2>
+    <p>My name is Hisham Elmorsi and I am a software engineer and a
+      passionate learner.. In my free time, I enjoy reading books and
+      listening to podcasts.</p>
+  </main>
 
-    <%- include('./partials/footer.ejs')
+<%- include('./partials/footer.ejs') %>
 
-  </body>
+</body>
 </html>
