--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,25 +1,28 @@
 <html lang="en">
-  <%- include('./partials/head.ejs') %->
+<%- include('./partials/head.ejs') %>
 
-  <body>
-    
-    <%- include('./partials/header.ejs') %->
+<body>
 
-    <main>
-        <h1>Create Blog Post</h1>
-        <form action="/" method="post">
-          <label for="title">Title:</label>
-          <input type="text" id="title" name="title" required>
-          <br><br>
-          <label for="body">Body:</label>
-          <textarea id="body" name="body" required></textarea>
-          <br><br>
-          <input type="submit" value="Submit">
-        </form>
-    </main>
+  <%- include('./partials/header.ejs') %>
+
+  <main>
+      <h1>Create Blog Post</h1>
+      <form action="/" method="post">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required>
+        <br><br>
+        <label for="body">Body:</label>
+        <textarea id="body" name="body" required></textarea>
+        <br><br>
+        <label for="snippet">Snippet:</label>
+        <input type="text" id="snippet" name="snippet">
+        <br><br>
+        <input type="submit" value="Submit">
+      </form>
+  </main>
 
 
-    <%- include('./partials/footer.ejs') %->
+  <%- include('./partials/footer.ejs') %>
 
-  </body>
+</body>
 </html>
