--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,23 @@
     <h1>Welcome to My Blog</h1>
     <p>Here you'll find articles about my learning journey</p>
     <h2>Recent Posts</h2>
+
+    <% if (posts.length > 0) {%>
     <ul>
+      <% posts.forEach( post => {%>
       <li>
-        <h2> How to Plan a Trip to Europe </h2>
-        <p>this is a snippeta sdfa df asdf asdf asd fasd fasd fas dfas df</p>
+        <h2> <%= post.title %></h2>
+        <p> <%= post.snippet %></p>
       </li>
+      <% }) %>
     </ul>
+    <%} else { %>
+      <p>Wait for coming posts</p>
+    <% } %>
   </main>
 
   <%- include('./partials/footer.ejs') %>
 
 </body>
 </html>
+
