--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,16 @@
 
   <main>
     <h1>Welcome to My Blog</h1>
-    <p>Here you'll find articles about my learning journey</p>
+    <p class="x">Here you'll find articles about my learning journey</p>
+    <br><br>
+    
     <h2>Recent Posts</h2>
 
     <% if (posts.length > 0) {%>
-    <ul>
       <% posts.forEach( post => {%>
-      <li>
         <h2> <%= post.title %></h2>
         <p> <%= post.snippet %></p>
-      </li>
       <% }) %>
-    </ul>
     <%} else { %>
       <p>Wait for coming posts</p>
     <% } %>
