--- a/views/create.ejs
+++ b/views/create.ejs
@@ -7,7 +7,7 @@
 
   <main>
       <h1>Create Blog Post</h1>
-      <form action="/" method="post">
+      <form action="/blogs" method="post">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required>
         <br><br>
