--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,15 +9,17 @@
     <p class="x">Here you'll find articles about my learning journey</p>
     <br><br>
     
-    <h2>Recent Posts</h2>
+    <h2>Recent blogs</h2>
 
-    <% if (posts.length > 0) {%>
-      <% posts.forEach( post => {%>
-        <h2> <%= post.title %></h2>
-        <p> <%= post.snippet %></p>
+    <% if (blogs.length > 0) {%>
+      <% blogs.forEach( blog => {%>
+        <a href="/blogs/<%= blog._id %>">
+          <h2> <%= blog.title %></h2>
+        </a>
+          <p> <%= blog.snippet %></p>
       <% }) %>
     <%} else { %>
-      <p>Wait for coming posts</p>
+      <p>Wait for coming blogs</p>
     <% } %>
   </main>
 
