--- a/public/style.css
+++ b/public/style.css
@@ -74,3 +74,27 @@ padding: 20px;
 max-width: 720px;
 margin: 0 auto;
 }
+
+/* Delete button */
+.delete-button {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-size: 1em;
+    cursor: pointer;
+    outline: none;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    cursor: pointer;
+    z-index: 1;
+
+  }
+  
+  .delete-button:hover {
+    background-color: darkred;
+  }
+  
+  
