--- a/views/blogViews/create.ejs
+++ b/views/blogViews/create.ejs
@@ -1,20 +1,20 @@
 <html lang="en">
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
 
-  <%- include('./partials/header.ejs') %>
+  <%- include('../partials/header.ejs') %>
 
   <main>
       <h1>Create Blog Post</h1>
       <form action="/blogs" method="post">
-        <label for="title">Title:</label>
+        <label for="title">Title</label>
         <input type="text" id="title" name="title" required>
         <br><br>
-        <label for="body">Body:</label>
+        <label for="body">Body</label>
         <textarea id="body" name="body" required></textarea>
         <br><br>
-        <label for="snippet">Snippet:</label>
+        <label for="snippet">Snippet</label>
         <input type="text" id="snippet" name="snippet">
         <br><br>
         <input type="submit" value="Submit">
@@ -22,7 +22,7 @@
   </main>
 
 
-  <%- include('./partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
