--- a/views/blogViews/details.ejs
+++ b/views/blogViews/details.ejs
@@ -1,8 +1,8 @@
 <html lang="en">
-<%- include('./partials/head.ejs')%>
+<%- include('../partials/head.ejs')%>
 
 <body>
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <div class= 'blog-body' >
         <h1><%=blog.title%></h1>
@@ -12,7 +12,7 @@
     <button class="delete-button" data-doc=<%=blog._id%>>Delete</button>
 
 
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
