--- a/views/blogViews/index.ejs
+++ b/views/blogViews/index.ejs
@@ -1,12 +1,11 @@
 <html lang="en">
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
 <body>
-  <%- include('./partials/header.ejs') %>
+  <%- include('../partials/header.ejs') %>
 
   <main>
     <h1>Welcome to My Blog</h1>
-    <p class="x">Here you'll find articles about my learning journey</p>
     <br><br>
     
     <h2>Recent blogs</h2>
@@ -23,7 +22,7 @@
     <% } %>
   </main>
 
-  <%- include('./partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
