--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,10 +4,7 @@
     <body>
 
         <%- include('./partials/header.ejs') %>
-
-        <h1>404</h1>
-        <h2>oops this page doesn't exist</h2>
-
+        <h1>404 Not found</h1>
         <%- include('./partials/footer.ejs') %>
 
     </body>
